Fix output symbols order in WindowAggProjection.
It might happen that outputs of `WindowAggProjection`
don't match actual outputs of the `WindowBatchIterator`.
The reason why it happens is that the window function symbols
in the window aggregation projection outputs list are placed in
the beginning and the standalone input symbols are placed after
them. The materialization of roww in the window batch iterator
happens in a way that the result of the window function evaluation
is placed in a prepared spare cell at the end of a row. That would
results in a mismatch between outputs of the projection and the
outputs of the batch iterator. It may lead to various exceptions,
for instance, streaming the result of window function evaluation
to a handler node might fail because of serialization exception,
such as streamers for the values are created based on the outputs
of the projection.

One scenario where it can happen is a select statement with a
standalone reference and a window function call that contains
the partition by clause in its definition ran against against
a concrete table relation.

(cherry picked from commit fd3af6080bfddfaf49861a4222d9b2d3612c29fd)